snapshots/syntax/library/functions/datetime/weekday/weekday_class_usage.snap
---
source: src/syntax/library/functions/datetime/weekday.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SetKeyword
                  text: Set
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: calendar
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NewKeyword
                  text: New
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: CalendarControl
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: MemberAccessExpression
                  children:
                    - kind: Identifier
                      text: calendar
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: StartDay
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Weekday
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: MemberAccessExpression
                              children:
                                - kind: Identifier
                                  text: calendar
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: FirstDate
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: vbMonday
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
